# TUFWGo

./: .gitignore  CMakeLists.txt  go.mod  go.sum  main.go  zed_test.txt
alert/: mail-sample.go  prepare-email-data.go  send-mail-sg-fallback.go  send-mail.go
audit/: audit-bootstrap.go  audit-create.go  audit-verify.go
auth/: authenticate-tufwgo-client.go  generate-controller-key.go
auth/tufwgo-auth/: go.mod  main.go
auth/tufwgo-authd/: go.mod  main.go
binaries/: appinfo.go
binaries/tufwgo-install/: go.mod  go.sum  main.go
binaries/tufwgo-update/: go.mod  main.go
copilot/: compiler.go  lm-client.go  model-struct.go  rule-add-only.gbnf
copilot/driver-llama.cpp/: CMakeLists.txt  tufwgo_llm.cpp
deploy/tufwgo-deploy/: go.mod  main.go
samples/: digcount.go  input.go
system/: bootstrap.go  input.go  sys-pipe.go  terminal.go  updates.go
system/local/: deps.go  editor.go  external-config.go  pkg.go  sys-pipe.go  terminal.go  user.go
system/ssh/: command-stream.go  host-keyrecorder-wrapper.go  known-host-helper.go  ssh-gateway.go  ssh-pipe.go  ssh-status.go
tui/: add-to-profile.go  create-profile.go  delete-list.go  enumeration-list.go  examine-profile.go  iac-flow.go  ipv4-form.go  load-from-profile.go  run-tui.go  simple-menu.go  tabbed-menu.go  ufw-list.go
ufw/: parse.go
